# Synnoia-Agent

./: main.py  nixpacks.toml  pyproject.toml  requirements.txt  test.html
agents/: __init__.py  router_agent.py
agents/QA_agent/: agent.py
agents/communication_agent/: agent.py
agents/content_generation_agent/: agent.py
agents/general_agent/: agent.py
agents/router_agent/: agent.py
agents/summary_agent/: agent.py
document_schema/: __init__.py  schema.py
generation_graph/: graph.py
generation_graph/agents/deplagiarizer_agent/: agent.py
generation_graph/agents/diagram_agent/: agent.py
generation_graph/agents/edit_agent/: agent.py
generation_graph/agents/humanizer_agent/: agent.py
generation_graph/agents/planner_agent/: agent.py
generation_graph/agents/review_agent/: agent.py
generation_graph/agents/writer_agent/: agent.py
graph/: __init__.py  graph.py
json_converter/: __init__.py  converter_synnoia_to_tiptap.py  converter_tiptap_to_synnoia.py
schema/: document_schema.py  outline_schema.py  xml_schema.py
