[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synnoia-agent"
version = "1.0.0"
description = "Synnoia AI Agent for document intelligence"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Synnoia", email = "agent@synnoia.com"}
]
keywords = ["ai", "agent", "document", "langchain", "langgraph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-openai",
    "python-dotenv",
    "langsmith",
    "pydantic",
    "langgraph",
    "langchain-groq",
    "fastapi",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/ArslanRude/Synnoia-Agent"
Repository = "https://github.com/ArslanRude/Synnoia-Agent"

[project.scripts]
synnoia-agent = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "document_schema*", "graph*", "json_converter*"]
exclude = ["tests*"]
